--- a/public/acron/css/styles.css
+++ b/public/acron/css/styles.css
@@ -3693,9 +3693,9 @@ html[data-color="dark-blue"] {
     --foreground-rgb: 36, 36, 36;
     --background-theme: #242424;
     --background-light: #292929;
-    --gradient-1: #1b98d0;
-    --gradient-2: #1d9dd7;
-    --gradient-3: #1ea5e1;
+    --gradient-1: #333333;
+    --gradient-2: #333333;
+    --gradient-3: #333333;
     --gradient-1-lighter: #1ea5e1;
     --gradient-1-darker: #1a90c5;
     --light-text: #f0f0f0;
@@ -3771,9 +3771,9 @@ html[data-color="light-blue"] {
     --foreground-rgb: 255, 255, 255;
     --background-theme: #eaf0f1;
     --background-light: #f8f8f8;
-    --gradient-1: #1ea8e7;
-    --gradient-2: #21aff0;
-    --gradient-3: #23b3f4;
+    --gradient-1: #333333;
+    --gradient-2: #333333;
+    --gradient-3: #333333;
     --gradient-1-lighter: #2abdff;
     --gradient-1-darker: #1fa5e2;
     --light-text: #fff;
