--- a/public/acron/css/styles.css
+++ b/public/acron/css/styles.css
@@ -3693,9 +3693,9 @@ html[data-color="dark-blue"] {
     --foreground-rgb: 36, 36, 36;
     --background-theme: #242424;
     --background-light: #292929;
-    --gradient-1: #333333;
-    --gradient-2: #333333;
-    --gradient-3: #333333;
+    --gradient-1: #00ADEF;
+    --gradient-2: #00ADEF;
+    --gradient-3: #00ADEF;
     --gradient-1-lighter: #1ea5e1;
     --gradient-1-darker: #1a90c5;
     --light-text: #f0f0f0;
@@ -3771,9 +3771,9 @@ html[data-color="light-blue"] {
     --foreground-rgb: 255, 255, 255;
     --background-theme: #eaf0f1;
     --background-light: #f8f8f8;
-    --gradient-1: #333333;
-    --gradient-2: #333333;
-    --gradient-3: #333333;
+    --gradient-1: #00ADEF;
+    --gradient-2: #00ADEF;
+    --gradient-3: #00ADEF;
     --gradient-1-lighter: #2abdff;
     --gradient-1-darker: #1fa5e2;
     --light-text: #fff;
@@ -3794,7 +3794,7 @@ html[data-color="light-blue"] {
     --success-darker: #285422;
     --light-darker: #c9c9c9;
     --dark-darker: #282828;
-    --body-darker: #333333;
+    --body-darker: #00ADEF;
     --alternate-darker: #616161;
     --muted-darker: #888888;
     --separator-darker: #c0c0c0;
